선택지 수정

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>올바른 도움 방법을 배워보세요</p>
       <div class="score-display">
         <div>현재 점수: <span id="currentScore">0</span>점</div>
-        <div>진행도: <span id="progressText">0</span>/<span id="totalSteps">8</span></div>
+        <div>진행도: <span id="progressText">0</span>/<span id="totalSteps">13</span></div>
       </div>
     </div>
 
@@ -89,10 +89,10 @@
       <div class="choice-container">
         <div class="choice-title">🤔 어떤 식으로 도와주는게 좋을까?</div>
         <button class="choice-btn" onclick="makeChoice(1, 2, 'ask_first')">
-          💬 몇 번 버스를 기다리는 중인지 물어보며 버스가 오면 알려준다. (적극적)
+          💬 몇 번 버스를 기다리는 중인지 물어보며 버스가 오면 알려준다.
         </button>
         <button class="choice-btn" onclick="makeChoice(1, 2, 'polite_approach')">
-          🤝 조심스레 다가가 도움이 필요한지 먼저 물어본다. (소극적)
+          🤝 조심스레 다가가 도움이 필요한지 먼저 물어본다.
         </button>
         <button class="choice-btn" onclick="makeChoice(1, 2, 'wrong_touch')">
           👋 어깨를 가볍게 2번 두드리며 도움이 필요한지 물어본다.
@@ -187,10 +187,10 @@
       <div class="choice-container">
         <div class="choice-title">🤔 어떤 식으로 도와주는게 좋을까?</div>
         <button class="choice-btn" onclick="makeChoice(3, 2, 'direct_guide')">
-          🚶‍♀️ 화장실까지 직접 안내해주기로 한다. (적극적)
+          🚶‍♀️ 화장실까지 직접 안내해주기로 한다. 
         </button>
         <button class="choice-btn" onclick="makeChoice(3, 2, 'verbal_guide')">
-          💬 "앞으로 20걸음 정도 가서 우측으로 10걸음 가면 여기 왼쪽에 화장실이 있어"라고 설명해준다. (소극적)
+          💬 "앞으로 20걸음 정도 가서 우측으로 10걸음 가면 여기 왼쪽에 화장실이 있어"라고 설명해준다.
         </button>
         <button class="choice-btn" onclick="makeChoice(3, 2, 'wrong_dog')">
           🐕 화장실까지 안내해주기 위해서 안내견 목줄을 잡고 직접 안내한다.
@@ -389,10 +389,10 @@
       <div class="choice-container">
         <div class="choice-title">🤔 이럴 땐 어떤 식으로 도와주는게 좋을까?</div>
         <button class="choice-btn" onclick="makeChoice(6, 2, 'ask_help')">
-          💬 가까이 다가가 "도와줄까요?"라고 먼저 물어본다. (적극적)
+          💬 가까이 다가가 "도와줄까요?"라고 먼저 물어본다.
         </button>
         <button class="choice-btn" onclick="makeChoice(6, 2, 'call_staff')">
-          👨‍🍳 부담스러워할 수 있기에 도움을 주실 수 있는 영양사 선생님을 부르러 간다. (소극적)
+          👨‍🍳 부담스러워할 수 있기에 도움을 주실 수 있는 영양사 선생님을 부르러 간다.
         </button>
         <button class="choice-btn" onclick="makeChoice(6, 2, 'wrong_touch')">
           🤲 정확한 위치를 누르기 힘들기 때문에 다가가서 직접 손목을 잡아 대신 눌러준다.
@@ -455,10 +455,10 @@
       <div class="choice-container">
         <div class="choice-title">🤔 어떤 식으로 도와주는게 좋을까?</div>
         <button class="choice-btn" onclick="makeChoice(7, 2, 'ask_role')">
-          💬 무엇이 가능하고 어떤 역할을 하고 싶은지 물어보고 조율한다. (적극적)
+          💬 무엇이 가능하고 어떤 역할을 하고 싶은지 물어보고 조율한다.
         </button>
         <button class="choice-btn" onclick="makeChoice(7, 2, 'offer_help')">
-          🤝 역할 분담이 끝난후 별도로 어려운 부분이 있으면 필요한 부분을 도와주겠다고 말하라고 한다. (소극적)
+          🤝 역할 분담이 끝난후 별도로 어려운 부분이 있으면 필요한 부분을 도와주겠다고 말하라고 한다.
         </button>
         <button class="choice-btn" onclick="makeChoice(7, 2, 'wrong_exclude')">
           ❌ 어려운 역할은 하기 힘드니까 미리 제외하는 것이 좋아.
@@ -505,7 +505,6 @@
       </div>
       <div class="action-buttons">
         <button class="btn-secondary" onclick="downloadReport()">📄 리포트 저장하기</button>
-        <button id="twitterShareBtn" class="btn-primary">🐦 트위터 공유</button>
         <button id="nativeShareBtn" class="btn-primary">💬 공유하기</button>
       <button class="btn-primary" onclick="location.reload()">🔁 다시 체험하기</button>
       </div>
