로그인버튼

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="container">
     <div class="header">
       <h1>🌟 매십이의 하루</h1>
+      <a href="#" class="login-btn">로그인</a>
       <p>올바른 도움 방법을 배워보세요</p>
       <div class="score-display">
         <div>현재 점수: <span id="currentScore">0</span>점</div>
@@ -505,6 +506,7 @@
       </div>
       <div class="action-buttons">
         <button class="btn-secondary" onclick="downloadReport()">📄 리포트 저장하기</button>
+        <button id="twitterShareBtn" class="btn-secondary">🐦 Twitter에 공유하기</button>
         <button id="nativeShareBtn" class="btn-primary">💬 공유하기</button>
       <button class="btn-primary" onclick="location.reload()">🔁 다시 체험하기</button>
       </div>
