--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
   <div class="container">
     <div class="header">
-      <h1>🌟 매십이의 하루</h1>
+      <h1>🌟 최매십의 하루</h1>
       <a href="#" class="login-btn">로그인</a>
       <p>올바른 도움 방법을 배워보세요</p>
       <div class="score-display">
         <div>현재 점수: <span id="currentScore">0</span>점</div>
-        <div>진행도: <span id="progressText">0</span>/<span id="totalSteps">13</span></div>
+        <div>진행도: <span id="progressText">0</span>/<span id="totalSteps">14</span></div>
       </div>
     </div>
 
@@ -506,8 +506,8 @@
       </div>
       <div class="action-buttons">
         <button class="btn-secondary" onclick="downloadReport()">📄 리포트 저장하기</button>
-        <button id="twitterShareBtn" class="btn-secondary">🐦 Twitter에 공유하기</button>
-        <button id="nativeShareBtn" class="btn-primary">💬 공유하기</button>
+        <button id="twitterShareBtn" class="btn-secondary">🐦 X로 공유하기</button>
+        <button id="nativeShareBtn" class="btn-secondary">💬 카카오로 공유하기</button>
       <button class="btn-primary" onclick="location.reload()">🔁 다시 체험하기</button>
       </div>
     </div>
